# tensorized_minhash

./: .gitignore  CHANGES.md  README.md  README.md_old  log_setup.py  logging.conf  main.py  pyproject.toml
demo/: README.md
demo/genome/: kmer_builder.py  similarity_report.py
demo/racing/: docker-compose.event1.yaml  docker-compose.event1.yml  docker-compose.event2.yaml  docker-compose.event2.yml
demo/racing/scoreboard/: Dockerfile  app.py  requirements.txt
demo/racing/scores/: datasketch_1776515653_level7_metrics.json  kron_1776515651_level7_metrics.json  tt_1776516141_level7_metrics.json
demo/racing/shared_input/: Dockerfile  generate_input.py
demo/racing/worker_datasketch/: Dockerfile  requirements.txt  worker.py
demo/racing/worker_kron/: Dockerfile  worker.py
demo/racing/worker_tt/: Dockerfile  worker.py
tensorized_minhash/: __init__.py  main.py  requirements.txt
tensorized_minhash/benchmarks/: __init__.py  accuracy.py  benchmark.py  helpers.py  memory.py  speed.py
tensorized_minhash/core/: __init__.py  config.py  kron_minhash.py  tt_minhash.py
tensorized_minhash/data/: __init__.py  builder.py  generator.py  loader.py
tensorized_minhash/spark/: __init__.py  distributed_hasher.py  pipeline.py  serializable.py  session.py
tensorized_minhash/tests/: test_minhash.py
tests/: __init__.py  conftest.py  test_benchmark_accuracy.py  test_benchmarks_accuracy.py  test_benchmarks_memory.py  test_benchmarks_speed.py  test_data_loader.py  test_kron_minhash.py  test_minhash.py  test_spark_pipeline.py  test_tt_minhash.py
