[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tensorized-minhash"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "scikit-learn>=1.4",
    "tqdm>=4.66",
]

[project.optional-dependencies]
spark = ["pyspark>=3.5"]
sketch = ["datasketch>=1.6"]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.4",
    "mypy>=1.9",
]
all = [
    "tensorized-minhash[spark,sketch,dev]",
]

[tool.setuptools.packages.find]
where = ["."]        # look for packages in repo root
include = ["tensorized_minhash*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
# Exclude build artefacts and virtual env
exclude = [
    ".venv",
    "__pycache__",
    ".pytest_cache",
    ".coverage",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors      (flake8: E)
    "W",   # pycodestyle warnings    (flake8: W)
    "F",   # pyflakes               (flake8: F)
    "I",   # isort
    "UP",  # pyupgrade (modern syntax)
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long - handled by formatter
    "B008",  # function-call in default argument (common in FastAPI/Click patterns)
    "SIM108", # ternary - sometimes clarity > brevity
]

[tool.ruff.lint.isort]
known-first-party = ["tensorized_minhash"]
force-sort-within-sections = true

[tool.ruff.format]
# black-compatible settings
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
